<resources>
    <string name="app_name">Delicious</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="favourite">Favourite Restaurant</string>
    <string name="about">FAQs</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="no_favorites">No Favourites</string>
    <string name="name">Enter Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="cost">Cost </string>
    <string name="f_o_o_d_r_u_n_n_e_r">F O O D R U N N E R..</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="rs_300_person">Rs. 300/person</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="faq_answer_one" > Kingsuk Biswas</string>
    <string name="faq_answer_two" > This FoodRunner App is fully working food ordering app with the list of
    top Restaurants from where the user can food according to his/her taste. </string>
    <string name="faq_answer_three" >Narula Institute of Technology</string>
    <string name="faq_answer_four">Yes, it can be run in dark mode.</string>
    <string name="q_1_name_of_the_developer_of_the_app">Q.1 Name of the Developer of the App?</string>
    <string name="q_2_about_the_app">Q.2 About the App?</string>
    <string name="q_3_college">Q.3 Name of my college?</string>
    <string name="q_4_mode">Q.4 Can the app be run in dark mode?</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_up">Sign up</string>
    <string name="mobile_number">Mobile Number(10 Digits)</string>
    <string name="log_out">Log out</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="enter_otp">Enter the OTP below:</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your Order has been placed successfully placed !</string>
    <string name="dummy_date">date</string>
    <string name="no_orders">No Orders</string>
    <string name="order_history_static_text">Order History</string>
    <string name="filter">filter</string>
    <string name="register">Register</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="restaurant_name_comes_here">Restaurant Name Comes Here</string>
    <string name="ok">Ok</string>
    <string name="_1">1.</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="rs_400">Rs. 400</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="enter_password">Min. 4 characters</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="Sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="rate">4.7</string>
    <string name="sort">Sort By?</string>
    <string name="reset">Reset</string>
    <string name="phone">Mobile Number</string>
    <string name="registered_mail">Registered Mail ID</string>
    <string name="user_image">User Image</string>
    <string name="rating">4.5</string>
    <string name="empty_cart">empty cart</string>
    <string name="order_history">Order History</string>
    <string name="rating1">Rating</string>
    <string name="can_t_find_any_restaurant_with_that_name">No resturans</string>

</resources>