<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favourite"
            android:title="@string/favourite" />
        <item
            android:id="@+id/OrderHistory"
            android:icon="@drawable/ic_order"
            android:title="@string/order_history" />
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/log_out" />
    </group>
</menu>