<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtEnterMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:text="@string/enter_otp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/otp_4_characters"
        android:hint="@string/otp_4_characters"
        android:inputType="number"
        android:maxLength="4"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/enter_password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="8"
        android:maxLines="1"
        android:padding="10dp"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:drawableEnd="@drawable/ic_done"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>
