<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@color/yellow"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgPersonHeader"
        android:layout_width="188dp"
        android:layout_height="152dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/user_image"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/txtHeaderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtHeaderMobile"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/mobile"
        android:textAppearance="?android:attr/textAppearanceSearchResultTitle"
        android:textStyle="bold" />

</LinearLayout>