<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardRestaurant"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtSNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/_1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txtItemName"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:padding="2dp"
                    android:text="@string/restaurant_name"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/txtItemCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/rs_400"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="2"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible" />

            <Button
                android:id="@+id/btnRemoveFromCart"
                android:layout_width="14dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="2"
                android:text="@string/remove"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>