<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.DayNight"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="277dp"
        android:layout_height="256dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/user_image"
        android:padding="10dp"
        android:src="@drawable/login1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginImage"
        android:layout_margin="15dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:linksClickable="true"
                android:padding="10dp"
                android:text="@string/Sign_in"
                android:textAppearance="?attr/textAppearanceSearchResultTitle"
                android:textColor="@color/yellow"
                android:textStyle="bold" />

            <View
                android:layout_width="118dp"
                android:layout_height="3dp"
                android:layout_below="@+id/txtSignIn"
                android:layout_marginStart="35dp"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:linksClickable="true"
                android:padding="10dp"
                android:text="@string/sign_up"
                android:textAppearance="?attr/textAppearanceSearchResultTitle"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginCardView"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/mobile"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_phone" />

            <EditText
                android:id="@+id/edtLogMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/edtLogPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:autofillHints="@string/enter_password"
                android:inputType="numberPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceSmall"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:linksClickable="true"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/dark_yellow"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                app:cardBackgroundColor="@color/yellow"
                app:cardCornerRadius="30dp"
                app:cardElevation="5dp">

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="2dp"
                    android:drawablePadding="13dp"
                    android:linksClickable="true"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_login" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
