<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MyProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imgUserImage"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@color/yellow"
            android:contentDescription="@string/user_image"
            android:scaleType="fitXY"
            android:src="@drawable/profile" />

        <View
            android:id="@+id/margin"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imgUserImage"
            android:layout_centerHorizontal="true"
            android:layout_margin="6dp"
            android:background="@color/yellow" />

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUserImage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/mobile_number"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/delivery_address"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>